--- a/pixit-admin/assets/scss/custom/_variables.scss
+++ b/pixit-admin/assets/scss/custom/_variables.scss
@@ -49,7 +49,7 @@ $grays: map-merge((
   "900": $gray-900
 ), $grays);
 
-$blue:    #f28d1b !default;
+$blue:    #f9ad15 !default;
 $indigo:  #5603ad !default;
 $purple:  #8965e0 !default;
 $pink:    #f3a4b5 !default;
@@ -80,7 +80,7 @@ $colors: map-merge((
 ), $colors);
 
 $default:       #172b4d !default;
-$primary:       #f28d1b !default;
+$primary:       #f9ad15 !default;
 $secondary:     #f7fafc !default;
 $success:       $green !default;
 $info:          $teal !default;
